2008-09-10  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/languages/pt_br.po: Removed the file from repository. The
	update named pt_BR.po (note capitalization) remains. The files were
	causing problems in local svn repositories based on filesystems 
	that don't differentiate between the 2 files.

2008-09-10  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/fr.mo, include/languages/pt_BR.po, include/languages/pl.mo, include/languages/eu.po, include/languages/sv.mo, include/languages/ru.po, include/languages/zh_TW.mo, include/languages/index.pot, include/languages/zh_CN.mo, include/languages/eu.mo, include/languages/pl.po, include/languages/ru.mo, include/languages/sv.po, include/languages/zh_TW.po, include/languages/zh_CN.po: Added new po and mo translations, imported from Rosetta.

	* operation/agentes/tactical.php: Added some strings for translation.

	* include/languages/Makefile: added new languages to compile.

2008-09-10  Jorge Gonzalez  <jorgegonz@artica.es>

	* languages/es.po, languages/it.mo, languages/ca.mo, languages/ast.mo,		languages/de.mo, languages/index.pot. languages/gl.po, languages/es.mo, 	languages/fr.po, languages/it.po, languages/ca.po, languages/ast.po, 		languages/de.po, languages/gl.mo: New translations imported from 		Rosetta, thanks to all contributors.

2008-09-08  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* reporting/fgraph.php: Further updating of the queries for the
	godmode/db directories. Mainly making sure all data outputs (graph or
	text) have the same order for simple overview. Also fixed some minor 
	issues like the one Sancho fixed (array_multisort). Made some strings 
	translatable

	* godmode/db/times_incl.php: This file is actually only relied on by
	db_info.php so I removed it and included the contents in db_info

	* godmode/db/db_purge.php: Since we went over the threshhold of 1,5M
	data entries on a P4, the page would timeout from the browser out. So